fixed videos template page styling on mobile

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,176 +1,187 @@
-/*
-white: #E9E9E9;
-green: #0E7D14;
-gray: #2b2b2b;
-dark-gray: #131313;
-black: #080808;
- */
+  /*
+  white: #E9E9E9;
+  green: #0E7D14;
+  gray: #2b2b2b;
+  dark-gray: #131313;
+  black: #080808;
+   */
 
-@import url('https://fonts.googleapis.com/css?family=Open+Sans');
+  @import url('https://fonts.googleapis.com/css?family=Open+Sans');
+  @font-face {
+    font-family: 'xbox360';
+    font-style: 'normal';
+    src: url("../fonts/x360.woff") format('woff');
+  }
 
-@font-face {
-   font-family: 'xbox360';
-   font-style: 'normal';
-   src: url("../fonts/x360.woff") format('woff');
- }
+  body {
+    /* background: url('http://localhost:3333/media/homepage-background.gif') no-repeat center center fixed;
+     background-size: cover; */
+    background-size: contain;
+    background-color: #080808;
+    color: #e9e9e9;
+    font-family: 'Open Sans', sans-serif;
+  }
 
- body {
-   /* background: url('http://localhost:3333/media/homepage-background.gif') no-repeat center center fixed;
-   background-size: cover; */
-   background-size: contain;
-   background-color: #080808;
-   color: #e9e9e9;
-   font-family: 'Open Sans', sans-serif;
- }
- .wrap {
-   max-width: 1500px;
-   margin: 0 auto;
- }
- .xb360 {
-   font-family: 'xbox360';
-   color: #0e7d14;
- }
+  .wrap {
+    max-width: 1500px;
+    margin: 0 auto;
+  }
 
- .xb360-white {
-   font-family: 'xbox360';
-   color: #e9e9e9;
- }
+  .xb360 {
+    font-family: 'xbox360';
+    color: #0e7d14;
+  }
 
- .panel {
-   width: 60%;
-   margin: 0 auto;
-   margin-top: 40px;
-   padding: 40px;
-   background-color: rgba(19, 19, 19, .95);
- }
+  .xb360-white {
+    font-family: 'xbox360';
+    color: #e9e9e9;
+  }
 
- @media only screen and (max-width: 768px) {
-   /* For mobile phones */
-   [class*="panel"] {
-     width: 90%;
-     padding: 10px;
-   }
- }
+  .panel {
+    width: 60%;
+    margin: 0 auto;
+    margin-top: 40px;
+    padding: 40px;
+    background-color: rgba(19, 19, 19, .95);
+  }
 
- .site-title {
-   font-size: 6em;
-   width: 80%;
-   margin: 0 auto;
-   text-align: center;
- }
+  @media only screen and (max-width: 768px) {
+    /* For mobile phones */
+    [class*="panel"] {
+      width: 90%;
+      padding: 10px;
+    }
+  }
 
- .site-title-com {
-   font-size: 3rem;
- }
+  .site-title {
+    font-size: 6em;
+    width: 80%;
+    margin: 0 auto;
+    text-align: center;
+  }
 
- @media only screen and (max-width: 768px) {
-      /* For mobile phones: */
-      [class*="site-title"] {
-        font-size: 48px;
-        width: 100%;
-        margin: 0 auto;
-        text-align: center;
-      }
+  .site-title-com {
+    font-size: 3rem;
+  }
+
+  @media only screen and (max-width: 768px) {
+    /* For mobile phones: */
+    [class*="site-title"] {
+      font-size: 48px;
+      width: 100%;
+      margin: 0 auto;
+      text-align: center;
+    }
+  }
+
+  @media only screen and (max-width: 768px) {
+    /* For mobile phones: */
+    [class*="site-title-com"] {
+      font-size: 28px;
+    }
+  }
+
+  .tagline {
+    text-align: center;
+  }
+
+  .home {
+    text-align: center;
+    margin-top: 50px;
+  }
+  /* Form Stuff */
+
+  .input-onload {
+    padding: 15px;
+    font-size: 15px;
+    border-style: none;
+  }
+
+  .error {
+    border-color: red;
+    border-style: inset;
+    transition: .2s;
+  }
+  /* End Form Stuff */
+
+  .icon-parent {
+    width: 80%;
+    margin: 25px auto;
+  }
+
+  .icon-div {
+    color: #2b2b2b;
+    padding: 25px 0 25px 0;
+    margin: 0 auto;
+  }
+
+  .mr-1 {
+    margin-right: 1em;
+  }
+
+  @media only screen and (max-width: 768px) {
+    /* For mobile phones: */
+    [class*="icon-mobile"] {
+      width: 100%;
+      margin: 10px;
+    }
+  }
+
+  .coming-soon {
+    font-size: 1.3rem;
+    margin-top: 20px;
+    color: #0e7d14;
+  }
+
+  .go-btn {
+    background-color: #0e7d14;
+    color: #E9E9E9;
+    font-size: 15px;
+    padding: 15px;
+    text-transform: uppercase;
+    border-style: none;
+    cursor: pointer;
+  }
+  /* Videos page */
+
+  .vid-wrap {
+    text-align: center;
+  }
+
+  .vid-img {
+    width: 100%;
+  }
+
+  .vid-container {
+    display: inline-block;
+    margin: 1rem 1rem;
+    width: 30%;
+    background-color: #131313;
+    padding-bottom: 20px;
   }
   @media only screen and (max-width: 768px) {
-       /* For mobile phones: */
-       [class*="site-title-com"] {
-         font-size: 28px;
-       }
-   }
-
-
-
- .tagline {
-   text-align: center;
- }
-
- .home {
-   text-align: center;
-   margin-top: 50px;
- }
-
- /* Form Stuff */
- .input-onload {
-   padding: 15px;
-   font-size: 15px;
-   border-style: none;
- }
- .error {
-   border-color: red;
-   border-style: inset;
-   transition: .2s;
- }
-
- /* End Form Stuff */
- .icon-parent {
-   width: 80%;
-   margin: 25px auto;
- }
-
- .icon-div {
-   color: #2b2b2b;
-   padding: 25px 0 25px 0;
-   margin: 0 auto;
- }
- .mr-1 {
-   margin-right: 1em;
- }
- @media only screen and (max-width: 768px) {
-      /* For mobile phones: */
-      [class*="icon-mobile"] {
-        width: 100%;
-        margin: 10px;
-      }
+    /* For mobile phones */
+    [class*="vid-container"] {
+      width: 90%;
+    }
+  }
+  .vid-container-child {
+    width: 90%;
+    margin: 0 auto;
   }
 
- .coming-soon {
-   font-size: 1.3rem;
-   margin-top: 20px;
-   color: #0e7d14;
- }
+  .vid-container-child p {
+    font-size: 12px;
+  }
 
- .go-btn {
-   background-color: #0e7d14;
-   color: #E9E9E9;
-   font-size: 15px;
-   padding: 15px;
-   text-transform: uppercase;
-   border-style: none;
-   cursor: pointer;
- }
+  .vid-container-title {
+    width: 100%;
+    background-color: #2b2b2b;
+    margin-top: 10px;
+    padding-top: 3px;
+    padding-bottom: 3px;
+  }
 
-
- /* Videos page */
-
- .vid-wrap {
-   text-align: center;
- }
- .vid-img {
-   width: 100%;
- }
- .vid-container {
-   display: inline-block;
-   margin: 1rem 1rem;
-   width: 30%;
-   background-color: #131313;
-   padding-bottom: 20px;
- }
- .vid-container-child {
-   width: 90%;
-   margin: 0 auto;
- }
- .vid-container-child p {
-   font-size: 12px;
- }
- .vid-container-title {
-   width: 100%;
-   background-color: #2b2b2b;
-   margin-top: 10px;
-   padding-top: 3px;
-   padding-bottom: 3px;
- }
-
-.vid-go-btn {
-  margin-top: 5px;
-}
+  .vid-go-btn {
+    margin-top: 5px;
+  }
